Refactoring: minor adaptions